--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 install:
   - sudo apt-get -qq install rake bison git gperf
 before_script:
-  - src/spdylay
+  - cd src/spdylay
   - autoreconf -i
   - automake
   - autoconf
