Updaete Travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ before_script:
   - cd ../../../
   - git clone https://github.com/mruby/mruby.git
   - cd mruby
-  - cp -fp ../mruby-mrbgem-template/.travis_build_config.rb build_config.rb
+  - cp -fp ../mruby-spdy/.travis_build_config.rb build_config.rb
 script: 
   - rake all test
